# WinsiBot

./: .env.example  .gitignore  CHANGELOG.md  README.en.md  README.md  biome.json  handler.ts  index.ts  mafuyu.js  package-lock.json  package.json  package.json.txt  pyproject.toml  start.sh  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
arquivos/: maf.json
arquivos/js/: idiomas.js
arquivos/lib/: funções.js
arquivos/seguranca/: antilink.json  welkom.json
dados/: premium.js
dados/lib/: diario.json  scraper2.js  tictactoe.js
docs/: commands.en.md  commands.md  economy.en.md  economy.md
files/config/: data.json
php/: Makefile  composer.json
php/public/: index.php  panel.html
php/src/: Panel.php  Routes.php  Sse.php  WebhookController.php  bootstrap.php
python/: pyrightconfig.json  requirements.txt  ruff.toml
python/ai/: ai_brain.py  alert_system.py  break_detector.py  code_analyzer.py  commands_ref.py  health_monitor.py  humor_engine.py  (+6 more)
rust/: .env.example  Cargo.toml  build.rs  session.ts
rust/src/: alerts.rs  analytics.rs  atomic.rs  auth.rs  bad_mac.rs  config.rs  conversations.rs  db.rs  lock_manager.rs  main.rs  metrics.rs  nlp.rs  rate_limiter.rs  routes.rs  session_id.rs  snapshot.rs  subbots.rs  tasks.rs  watchdog.rs
scripts/: ai_test.js  api.js  build_cython.ps1  celery.js  health.js  manage.js  monitor.js  py_format.js  py_lint.js  redis.js  setup.js  spam_build.js  start.ps1  start.sh  status.js
src/: config.ts  index.ts  supervisor.ts
(+299 files in other folders)
