[package]
name = "winsibot-session-api"
version = "3.0.0"
edition = "2021"

[[bin]]
name = "winsibot-session-api"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
